corpus/let-rec.txt
================================================================================
let rec
================================================================================

let rec x = x in x

--------------------------------------------------------------------------------

(term
  (uni_term
    (let_expr
      (pattern
        (ident))
      (term
        (uni_term
          (infix_expr
            (applicative
              (record_operand
                (atom
                  (ident)))))))
      (term
        (uni_term
          (infix_expr
            (applicative
              (record_operand
                (atom
                  (ident))))))))))
